Dhuru Emne LEkhsi

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </tr>
             <tr> 
                 <td class="main"> 
-                    <strong><span>Farhana Jaman </span></strong>
+                    <strong><span>Farhana Jaman Proma</span></strong>
             </br>
                 <span style="font-size:16px;color: black;"> Web Developer</span>
                  </td>
